improvement resource update
